--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.8",
+    "echarts": "^6.0.0",
+    "echarts-for-react": "^3.0.5",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
